template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: Satisfactory Server and associated infra
Parameters:
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.192.0.0/16

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.192.10.0/24

  PortalCertificateArn:
    Description: ARN of the ACM certificate for portal.fivearcher.co.uk (must be issued in us-east-1 for CloudFront)
    Type: String

  PortalDomainName:
    Description: Domain name the admin portal is served from
    Type: String
    Default: portal.fivearcher.co.uk

  HostedZoneId:
    Description: Route53 Hosted Zone ID for fivearcher.co.uk
    Type: String
    Default: Z05196342OPHB8ROH3JXW

  ServerDomainName:
    Description: Domain name pointing at the Satisfactory server's public IP
    Type: String
    Default: sat.fivearcher.co.uk

  DnsTtl:
    Description: DNS entry TTL value
    Type: String
    Default: "5"

Resources:
  Artefacts:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "${AWS::StackName}-${AWS::AccountId}-artefacts"
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - BucketKeyEnabled: true
            ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      OwnershipControls:
        Rules:
          - ObjectOwnership: BucketOwnerEnforced
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName} VPC"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName} Internet Gateway"

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName} Public Subnet (AZ1)"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName} Public Routes"

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "server-sg"
      GroupDescription: "Security group with server ingress"
      VpcId: !Ref VPC

  SshAccessIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: "10.192.0.0/16"
      Description: ssh inbound access from VPC only
      FromPort: 22
      GroupId: !GetAtt ServerSecurityGroup.GroupId
      IpProtocol: tcp
      ToPort: 22

  Satisfactory7777TcpAccessIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: "0.0.0.0/0"
      Description: Satisfactory inbound access
      FromPort: 7777
      GroupId: !GetAtt ServerSecurityGroup.GroupId
      IpProtocol: tcp
      ToPort: 7777


  Satisfactory7777UdpAccessIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: "0.0.0.0/0"
      Description: Satisfactory inbound access
      FromPort: 7777
      GroupId: !GetAtt ServerSecurityGroup.GroupId
      IpProtocol: udp
      ToPort: 7777


  Satisfactory8888TcpAccessIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: "0.0.0.0/0"
      Description: Satisfactory inbound access
      FromPort: 8888
      GroupId: !GetAtt ServerSecurityGroup.GroupId
      IpProtocol: tcp
      ToPort: 8888

  SshAccessEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      CidrIp: "10.192.0.0/16"
      Description: ssh outbound access to VPC only
      FromPort: 22
      GroupId: !GetAtt ServerSecurityGroup.GroupId
      IpProtocol: tcp
      ToPort: 22

  AllEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      CidrIp: "0.0.0.0/0"
      Description: https outbound access
      FromPort: 0
      GroupId: !GetAtt ServerSecurityGroup.GroupId
      IpProtocol: "-1"
      ToPort: 65535

  Ec2InstanceConnectEndpoint:
    Type: AWS::EC2::InstanceConnectEndpoint
    Properties:
      ClientToken: !Sub "${AWS::StackName}_Ec2InstanceConnectEndpoint"
      PreserveClientIp: false
      SecurityGroupIds:
        - !Ref ServerSecurityGroup
      SubnetId: !Ref PublicSubnet1

  ServerBucketReadRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
      Policies:
        - PolicyName: S3-read-only-access
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - s3:GetObject
                  - s3:ListBucket
                Resource:
                  - !Sub "arn:aws:s3:::${Artefacts}"
                  - !Sub "arn:aws:s3:::${Artefacts}/*"

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-0052c604556266c60"
      IamInstanceProfile: !Ref InstanceProfile
      InstanceType: r5a.large
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2InstanceLaunchTemplate
        Version: !GetAtt EC2InstanceLaunchTemplate.LatestVersionNumber
      SecurityGroupIds:
        - !Ref ServerSecurityGroup
      SubnetId: !Ref PublicSubnet1

  EC2InstanceLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        InstanceMarketOptions:
          MarketType: spot
          SpotOptions:
            SpotInstanceType: persistent
            InstanceInterruptionBehavior: stop
        BlockDeviceMappings:
          - DeviceName: /dev/sda1
            Ebs:
              VolumeSize: 24
      LaunchTemplateName: !Sub "${AWS::StackName}-ec2-launch-template"

  InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref ServerBucketReadRole

  # --- Admin portal: auth ---

  CognitoUserPool:
    Type: AWS::Cognito::UserPool
    Properties:
      UserPoolName: !Sub ${AWS::StackName}-portal-users
      AutoVerifiedAttributes:
        - email
      UsernameAttributes:
        - email
      Policies:
        PasswordPolicy:
          MinimumLength: 8
          RequireUppercase: true
          RequireLowercase: true
          RequireNumbers: true
          RequireSymbols: false
      Schema:
        - Name: email
          Required: true
          Mutable: true

  CognitoUserPoolClient:
    Type: AWS::Cognito::UserPoolClient
    Properties:
      ClientName: !Sub ${AWS::StackName}-portal-client
      UserPoolId: !Ref CognitoUserPool
      ExplicitAuthFlows:
        - ALLOW_USER_SRP_AUTH
        - ALLOW_REFRESH_TOKEN_AUTH
      GenerateSecret: false

  # --- Admin portal: static site (S3 + CloudFront) ---

  PortalBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "${AWS::StackName}-${AWS::AccountId}-portal"
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - BucketKeyEnabled: true
            ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      OwnershipControls:
        Rules:
          - ObjectOwnership: BucketOwnerEnforced
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true

  PortalBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref PortalBucket
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: AllowCloudFrontOAC
            Effect: Allow
            Principal:
              Service: cloudfront.amazonaws.com
            Action: s3:GetObject
            Resource: !Sub "${PortalBucket.Arn}/*"
            Condition:
              StringEquals:
                AWS:SourceArn: !Sub "arn:aws:cloudfront::${AWS::AccountId}:distribution/${PortalDistribution}"

  PortalOAC:
    Type: AWS::CloudFront::OriginAccessControl
    Properties:
      OriginAccessControlConfig:
        Name: !Sub ${AWS::StackName}-portal-oac
        OriginAccessControlOriginType: s3
        SigningBehavior: always
        SigningProtocol: sigv4

  PortalDistribution:
    Type: AWS::CloudFront::Distribution
    Properties:
      DistributionConfig:
        Enabled: true
        DefaultRootObject: index.html
        Aliases:
          - !Ref PortalDomainName
        ViewerCertificate:
          AcmCertificateArn: !Ref PortalCertificateArn
          SslSupportMethod: sni-only
          MinimumProtocolVersion: TLSv1.2_2021
        Origins:
          - Id: S3Origin
            DomainName: !GetAtt PortalBucket.RegionalDomainName
            S3OriginConfig:
              OriginAccessIdentity: ''
            OriginAccessControlId: !GetAtt PortalOAC.Id
        DefaultCacheBehavior:
          TargetOriginId: S3Origin
          ViewerProtocolPolicy: redirect-to-https
          AllowedMethods:
            - GET
            - HEAD
          CachedMethods:
            - GET
            - HEAD
          ForwardedValues:
            QueryString: false
            Cookies:
              Forward: none
        CustomErrorResponses:
          - ErrorCode: 403
            ResponseCode: 200
            ResponsePagePath: /index.html
          - ErrorCode: 404
            ResponseCode: 200
            ResponsePagePath: /index.html

  PortalDnsRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZoneId
      Name: !Ref PortalDomainName
      Type: A
      AliasTarget:
        DNSName: !GetAtt PortalDistribution.DomainName
        HostedZoneId: Z2FDTNDATAQYW2

  # --- Admin portal: API + Lambda ---

  ServerControlApi:
    Type: AWS::Serverless::HttpApi
    Properties:
      StageName: prod
      CorsConfiguration:
        AllowOrigins:
          - !Sub "https://${PortalDomainName}"
        AllowMethods:
          - GET
          - POST
          - OPTIONS
        AllowHeaders:
          - Content-Type
          - Authorization
      Auth:
        DefaultAuthorizer: CognitoAuthorizer
        Authorizers:
          CognitoAuthorizer:
            IdentitySource: $request.header.Authorization
            JwtConfiguration:
              issuer: !Sub https://cognito-idp.${AWS::Region}.amazonaws.com/${CognitoUserPool}
              audience:
                - !Ref CognitoUserPoolClient

  ServerControlFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: server-control/
      Handler: app.handler
      Runtime: nodejs24.x
      Architectures:
        - x86_64
      Timeout: 30
      MemorySize: 256
      LoggingConfig:
        LogFormat: JSON
      Environment:
        Variables:
          INSTANCE_ID: !Ref EC2Instance
          HOSTED_ZONE_ID: !Ref HostedZoneId
          DOMAIN_NAME: !Ref ServerDomainName
          ALLOWED_ORIGIN: !Sub "https://${PortalDomainName}"
          DNS_TTL: !Ref DnsTtl
          SATISFACTORY_API_PORT: "7777"
          SATISFACTORY_API_TOKEN_PARAM: !Sub "/${AWS::StackName}/satisfactory/api-token"
      Policies:
        - Version: "2012-10-17"
          Statement:
            - Effect: Allow
              Action:
                - ec2:DescribeInstances
              Resource: '*'
            - Effect: Allow
              Action:
                - ec2:StartInstances
                - ec2:StopInstances
              Resource: !Sub "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/${EC2Instance}"
            - Effect: Allow
              Action:
                - route53:ChangeResourceRecordSets
              Resource: !Sub "arn:aws:route53:::hostedzone/${HostedZoneId}"
            - Effect: Allow
              Action:
                - ssm:GetParameter
              Resource: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${AWS::StackName}/satisfactory/api-token"
      Events:
        GetStatus:
          Type: HttpApi
          Properties:
            ApiId: !Ref ServerControlApi
            Path: /status
            Method: GET
        StartServer:
          Type: HttpApi
          Properties:
            ApiId: !Ref ServerControlApi
            Path: /start
            Method: POST
        StopServer:
          Type: HttpApi
          Properties:
            ApiId: !Ref ServerControlApi
            Path: /stop
            Method: POST
        UpdateDns:
          Type: HttpApi
          Properties:
            ApiId: !Ref ServerControlApi
            Path: /update-dns
            Method: POST
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: true
        Target: es2020
        Sourcemap: true
        EntryPoints:
          - app.ts

  ServerImageFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: server-control/
      Handler: image.handler
      Runtime: nodejs24.x
      Architectures:
        - x86_64
      Timeout: 60
      MemorySize: 256
      LoggingConfig:
        LogFormat: JSON
      Environment:
        Variables:
          INSTANCE_ID: !Ref EC2Instance
      Policies:
        - Version: "2012-10-17"
          Statement:
            - Effect: Allow
              Action:
                - ec2:CreateImage
                - ec2:CreateTags
              Resource:
                - !Sub "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/${EC2Instance}"
                - !Sub "arn:aws:ec2:${AWS::Region}::image/*"
                - !Sub "arn:aws:ec2:${AWS::Region}::snapshot/*"
                - !Sub "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:volume/*"
      Events:
        InstanceStopped:
          Type: EventBridgeRule
          Properties:
            Pattern:
              source:
                - aws.ec2
              detail-type:
                - "EC2 Instance State-change Notification"
              detail:
                state:
                  - stopped
                instance-id:
                  - !Ref EC2Instance
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: true
        Target: es2020
        Sourcemap: true
        EntryPoints:
          - image.ts

  ScheduledStopFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: server-control/
      Handler: scheduled-stop.handler
      Runtime: nodejs24.x
      Architectures:
        - x86_64
      Timeout: 30
      MemorySize: 256
      LoggingConfig:
        LogFormat: JSON
      Environment:
        Variables:
          INSTANCE_ID: !Ref EC2Instance
      Policies:
        - Version: "2012-10-17"
          Statement:
            - Effect: Allow
              Action: ec2:StopInstances
              Resource: !Sub "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/${EC2Instance}"
      Events:
        DailySchedule:
          Type: ScheduleV2
          Properties:
            ScheduleExpression: "cron(0 23 * * ? *)"
            ScheduleExpressionTimezone: Europe/London
            FlexibleTimeWindow:
              Mode: "OFF"
            Input: '{}'
            RetryPolicy:
              MaximumEventAgeInSeconds: 3600
              MaximumRetryAttempts: 2
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: true
        Target: es2020
        Sourcemap: true
        EntryPoints:
          - scheduled-stop.ts

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [ ",", [ !Ref PublicSubnet1 ]]

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1

  PortalUrl:
    Description: URL of the admin portal
    Value: !Sub "https://${PortalDomainName}"

  ApiUrl:
    Description: URL of the server control API
    Value: !Sub "https://${ServerControlApi}.execute-api.${AWS::Region}.amazonaws.com/prod"

  CognitoUserPoolId:
    Description: Cognito User Pool ID
    Value: !Ref CognitoUserPool

  CognitoClientId:
    Description: Cognito App Client ID
    Value: !Ref CognitoUserPoolClient
